[metadata]
name = mhdatalearn
version = 0.0.1
authors = Simon Samuel Yan Kris
authors_emails = ns650@exeter.ac.uk 
description = This package select the best model Algroithm for a binary classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/N-Sam/MhDataLearn
py_modules = ["engine", "converter"]
package_dir = {'': 'src'},
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License V2 or Latter (GPLv2+)
    Operating System :: OS independent

    


[options]
packages = find:
python_requires = >= 3.6
include_package_data = True